# niva

./: . editorconfig  .editorconfig  .gitignore  .npmrc  .prettierrc  404.html  Cargo.toml  LICENSE  README.md  build.rs  build_MacOS.sh  build_Windows.cmd  deploy.sh  docusaurus.config.js  index.html  markdown-page.html  opensearch.xml  package.json  search.html  sitemap.xml
.husky/: pre-commit
assets/css/: styles.b20ae013.css  styles.e570eae5.css
assets/js/: 0125f177.1355ca3c.js  047a1cf7.c06c42f0.js  06a6cd70.2fcb9cab.js  06a6cd70.36b44257.js  06a6cd70.85f01804.js  06a6cd70.b6cdd446.js  0da58919.1d8e4e81.js  0da58919.7d7078b8.js  0da58919.7ee6d727.js  0da58919.86b4050d.js  0da58919.a8cef920.js  0da58919.f37e736d.js  0e384e19.478784f8.js  0e384e19.596715bb.js  0e384e19.75771479.js  0e384e19.994f5056.js  10c507ea.4213d9ea.js  10c507ea.504fdfad.js  10c507ea.7874ce3f.js  10c507ea.ed67b06a.js  11ae053c.0ef0f103.js  11ae053c.182dede5.js  11ae053c.4e389fd4.js  11ae053c.87a6ede8.js  11ae053c.d7e19553.js  11ae053c.eecdaa74.js  14a8a391.04fd9e3d.js  14eb3368.2e6a13ed.js  14eb3368.86c3e2cb.js  14eb3368.e7513a57.js  15621851.4e3941f9.js  1bba2fa1.65d240af.js  1be78505.c02bebdb.js  1df93b7f.1ed2b9eb.js  1df93b7f.41fa2b56.js  1df93b7f.4babf25e.js  1df93b7f.9804c691.js  1f391b9e.705e3044.js  210.dfe216f7.js  272.e54eb336.js  (+127 more)
crates/icon_creator/: Cargo.toml
crates/niva/: Cargo.toml  build.rs
crates/niva/assets/: api.js  initialize_script.js
crates/niva/src/: main.rs
crates/niva/src/app/: arguments.rs  assets.rs  event.rs  event_handler.rs  launch_info.rs  manager.rs  mod.rs  options.rs  tray.rs  utils.rs
crates/niva/src/app/api/: clipboard.rs  dialog.rs  extra.rs  fs.rs  http.rs  mod.rs  monitor.rs  os.rs  process.rs  resource.rs  shortcut.rs  tray.rs  webview.rs  window.rs  window_extra.rs
crates/niva/src/app/api_manager/: mod.rs  thread_pool.rs
crates/niva/src/app/common/: menu_options.rs  mod.rs
crates/niva/src/app/menu/: mod.rs  options.rs
crates/niva/src/app/resource/: bin.rs  fs.rs  mod.rs  options.rs  server.rs
crates/niva/src/app/resource_manager/: image_utils.rs  mod.rs  win_utils.rs
crates/niva/src/app/shortcut/: mod.rs
crates/niva/src/app/shortcut_manager/: mod.rs
crates/niva/src/app/tray/: mod.rs
crates/niva/src/app/tray_manager/: mod.rs
crates/niva/src/app/utils/: json.rs  mac.rs  mod.rs  win.rs
crates/niva/src/app/window/: mod.rs  options.rs  webview.rs  window.rs
crates/niva/src/app/window_manager/: builder.rs  mod.rs  options.rs  url.rs  window.rs
crates/niva/src/niva_app/: event_handler.rs  mod.rs  options.rs  utils.rs
crates/niva/src/niva_app/api/: dialog.rs  fs.rs  http.rs  mod.rs  os.rs  resource.rs  webview.rs  window.rs
crates/niva/src/niva_app/api_manager/: mod.rs  thread_pool.rs
crates/niva/src/niva_app/resource_manager/: image_utils.rs  mod.rs  win_utils.rs
crates/niva/src/niva_app/window_manager/: mod.rs  niva_window.rs  options.rs
crates/niva/src/utils/: arc_mut.rs  err.rs  id.rs  id_container.rs  mac.rs  macros.rs  mod.rs  path.rs  prop.rs  win.rs
crates/niva_macros/: Cargo.toml
crates/niva_win_utils/: Cargo.toml
crates/tauri-lite/: Cargo.toml
crates/tauri-lite-lib/: Cargo.toml
crates/tauri_lite/: Cargo.toml  build.rs
crates/tauri_lite/src/: api_manager.rs  main.rs  static_server.rs  utils.rs  win_utils.rs
crates/tauri_lite/src/.backup/: api_manager.rs  main.rs  static_server.rs  thread_pool.rs  utils.rs  window_manager.rs
crates/tauri_lite/src/.backup/api/: os.rs  process.rs
crates/tauri_lite/src/.backup/environment/: config.rs  mod.rs
crates/tauri_lite/src/.backup/main_window/: event.rs  menu.rs  mod.rs  window.rs
crates/tauri_lite/src/api/: fs.rs
crates/tauri_lite/src/api_manager/: mod.rs
crates/tauri_lite/src/apis/: dialog.rs  fs.rs  http.rs  mod.rs  os.rs  process.rs  resource.rs  webview.rs  window.rs
crates/tauri_lite/src/assets/: icon.bitmap  preload.js
crates/tauri_lite/src/environment/: config.rs  mod.rs  options.rs
crates/tauri_lite/src/event_loop/: event_handler.rs  mod.rs
crates/tauri_lite/src/main_window/: mod.rs  webview.rs  window.rs
crates/tauri_lite/src/resource_manager/: mod.rs  utils.rs  win_resource.rs
crates/tauri_lite/src/window_manager/: menu.rs  mod.rs  options.rs  webview.rs  window.rs
devtools/: package.json
devtools/public/: index.html  tauri-lite.json
devtools/src/: app.tsx  import-page.tsx  index.css  index.tsx  plist-template.ts  project-model.ts  style.css  utils.ts
docs/: event.html  intro.html  intro.md
docs/api/: _category_.json  clipboard.html  clipboard.md  dialog.html  extra.html  fs.html  fs.md  http.html  monitor.html  niva.html  niva.md  os.html  os.md  process.html  resource.html  shortcut.html  shortcut.md  tray.html  tray.md  webview.html  webview.md  window.html  window_extra.html  window_extra.md
docs/category/: api-文档.html  事件文档.html  常见实践.html  快速上手.html  (+2 more)
en/: 404.html  index.html  markdown-page.html  opensearch.xml  search.html  sitemap.xml
example/: index.html  index.js  tauri-lite  tauri-lite.json
scripts/: create-icon-bitmap.js  get_all_apis.js
src/: config.rs  env.rs  main.rs  preload.js  server.rs  static_server.rs  thread_pool.rs  window.rs
theme/: index.html  main.css
(+284 files in other folders)
