[package]
name = "tauri-lite"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.152", features = ["derive"] }
serde_json = { version = "1.0.93" }
tokio = { version = "1.25.0", features = ["fs", "net", "macros", "rt-multi-thread"] }
wry = { version = "0.27.0", features = ["file-drop", "devtools"] }
hyper = { version = "1.0.0-rc.2", features = ["server", "http-body-util", "http1"] }
http-body-util = "0.1.0-rc.2"
bytes = "1.4.0"
mime_guess = "2.0.4"
once_cell = "1.17.1"
reqwest = "0.11.14"
os_info = "3.6.0"
directories = "4.0.1"
