[package]
name = "niva"
description = "A lightweight Tauri alternative"
version = "0.9.9"
edition = "2021"

[profile.release]
lto = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
niva_macros = { path = "../niva_macros" }

wry = { version = "0.29.0", default-features = false, features = [
	"devtools",
	"transparent",
	"fullscreen",
	"file-drop",
	"tray",
] }
tao = { version = "0.16.2", features = ["tray"] }
base64 = { version = "0.13.1", features = ["alloc"] }
native-tls = "0.2.11"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
mime_guess = "2.0.4"
os_info = "3.6.0"
directories = "4.0.1"
opener = "0.5.2"
rfd = { version = "0.11.2", default-features = false, features = [
	"xdg-portal",
] }
fs_extra = "1.3.0"
anyhow = "1.0.69"
flate2 = "1.0.25"
png = "0.17.7"
sys-locale = "0.2.4"
url = "2.3.1"
async-trait = "0.1.68"
async-fs = "1.6.0"
async-io = "1.13.0"
smol = "1.3.0"
libloading = "0.8.0"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = { version = "0.24.1" }
objc = "0.2.7"
active-win-pos-rs = "0.7.1"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = "0.3.9"
windows = { version = "0.44.0", features = ["Win32_Foundation"] }


[build-dependencies]
build-version = "0.1.1"
