[package]
name = "tauri_lite"
description = "A lightweight Tauri alternative"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
wry = { version = "0.27.0", default-features = false, features = [
	"devtools",
	"transparent",
	"fullscreen",
	"file-drop",
] }
ureq = { version = "2.6.2", default-features = false, features = [
	"native-tls",
	"gzip",
	"json",
] }
base64 = { version = "0.21.0", features = ["alloc"] }
native-tls = "0.2.11"

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"

mime_guess = "2.0.4"
os_info = "3.6.0"
directories = "4.0.1"
opener = "0.5.2"
rfd = { version = "0.11.2", default-features = false, features = [
	"xdg-portal",
] }
fs_extra = "1.3.0"
anyhow = "1.0.69"
winapi = "0.3.9"
flate2 = "1.0.25"

[build-dependencies]
winres = "0.1.12"
build-version = "0.1.1"
